
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ u32_t ;
typedef int sys_sem_t ;
struct sswt_cb {scalar_t__ timeflag; int * psem; } ;


 int sswt_handler ;
 int sys_sem_wait (int ) ;
 int sys_timeout (scalar_t__,int ,struct sswt_cb*) ;
 int sys_untimeout (int ,struct sswt_cb*) ;

int
sys_sem_wait_timeout(sys_sem_t sem, u32_t timeout)
{
    struct sswt_cb sswt_cb;

    sswt_cb.psem = &sem;
    sswt_cb.timeflag = 0;


    if (timeout > 0)

        sys_timeout(timeout, sswt_handler, &sswt_cb);
    sys_sem_wait(sem);

    if (sswt_cb.timeflag)
    {

        return 0;
    } else {

        sys_untimeout(sswt_handler, &sswt_cb);
        return 1;
    }

}
