; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/core/extr_sys.c_sys_sem_wait_timeout.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/core/extr_sys.c_sys_sem_wait_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sswt_cb = type { i64, i32* }

@sswt_handler = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_sem_wait_timeout(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.sswt_cb, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %7 = getelementptr inbounds %struct.sswt_cb, %struct.sswt_cb* %6, i32 0, i32 1
  store i32* %4, i32** %7, align 8
  %8 = getelementptr inbounds %struct.sswt_cb, %struct.sswt_cb* %6, i32 0, i32 0
  store i64 0, i64* %8, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp sgt i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i64, i64* %5, align 8
  %13 = load i32, i32* @sswt_handler, align 4
  %14 = call i32 @sys_timeout(i64 %12, i32 %13, %struct.sswt_cb* %6)
  br label %15

15:                                               ; preds = %11, %2
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @sys_sem_wait(i32 %16)
  %18 = getelementptr inbounds %struct.sswt_cb, %struct.sswt_cb* %6, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %25

22:                                               ; preds = %15
  %23 = load i32, i32* @sswt_handler, align 4
  %24 = call i32 @sys_untimeout(i32 %23, %struct.sswt_cb* %6)
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %22, %21
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @sys_timeout(i64, i32, %struct.sswt_cb*) #1

declare dso_local i32 @sys_sem_wait(i32) #1

declare dso_local i32 @sys_untimeout(i32, %struct.sswt_cb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
